--- a/src/assests/css/index.css
+++ b/src/assests/css/index.css
@@ -1,3 +1,8 @@
+html {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +12,40 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "roboto", sans-serif;
+}
+
+.white-vertion.black-bg {
+  background-color: #fff;
+}
+
+.white-vertion div {
+  color: #000;
+}
+.white-vertion .dark-bg {
+  background-color: #fff;
+}
+.dark-bg {
+  background-color: #202026;
+}
+
+.white-vertion .dark-bg {
+  background-color: #fff;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -17,6 +56,44 @@ code {
     padding-left: 70px;
     padding-right: 70px;
   }
+}
+
+a {
+  text-decoration: none !important;
+  cursor: pointer;
+  padding: 0px;
+  background-color: transparent;
+  -webkit-transition: color 0.3s ease;
+  transition: color 0.3s ease;
+  color: #000;
+  opacity: 0.9;
+}
+
+a:hover {
+  background-color: transparent;
+}
+
+.btn.btn-fill {
+  background-color: #0bceaf;
+  color: #fff;
+}
+
+.btn:last-child {
+  margin-right: 0px !important;
+}
+
+
+.btn {
+  outline: 0;
+}
+
+.btn {
+  -webkit-transition: color 0.3s ease;
+  transition: color 0.3s ease;
+  outline: 0;
+  padding: 8px 30px;
+  font-weight: bold;
+  border-radius: 20px;
 }
 
 .shadow-header::before{
@@ -125,3 +202,172 @@ ul li {
   margin-right: 8px;
 }
 
+/*  About me */
+
+.section-separator {
+  padding: 60px 0;
+  padding-top: 100px;
+}
+
+.about-image-container {
+  visibility: visible;
+  animation-duration: 0.8s;
+  animation-delay: 0.4s;
+  animation-name: fadeInUp;
+}
+
+.mh-about .mh-about-inner {
+  padding-left: 50px;
+}
+
+.mh-about .mh-about-inner h2 {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.mh-about .mh-about-inner p {
+  margin-bottom: 30px;
+}
+
+.mh-about-tag {
+  word-break: break-all;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.mh-about .mh-about-inner .btn {
+  margin-top: 20px;
+}
+
+.mh-about-tag ul li {
+  margin: 0px 6px;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  padding: 4px 0px;
+  display: inline-block;
+}
+
+.mh-about-tag ul li span:hover {
+  background-color: transparent !important;
+}
+
+.mh-about-tag ul li span {
+  border: 1px solid #0bceaf;
+  padding: 4px 10px;
+  border-radius: 4px;
+}
+
+/*
+    ==============
+    EXPERIENCES
+    ==============
+*/
+
+.mh-education {
+  padding-right: 30px;
+}
+
+.mh-experince h3 {
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: bold;
+  margin-bottom: 60px;
+}
+
+.white-vertion h1, .white-vertion h2, .white-vertion h3, .white-vertion h4, .white-vertion h5, .white-vertion h6, .white-vertion p, .white-vertion address, .white-vertion span, .white-vertion q {
+  opacity: 0.8;
+}
+
+.white-vertion h3 {
+  color: #000;
+}
+
+.white-vertion .mh-experince .mh-education-deatils .mh-education-item {
+  -webkit-box-shadow: 0px 10px 20px 4px #00000015;
+  box-shadow: 0px 10px 20px 4px #00000015;
+}
+
+.mh-experince .mh-education-deatils .mh-education-item {
+  margin-bottom: 30px;
+  padding: 26px 30px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+}
+
+.mh-work h3 {
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: bold;
+  margin-bottom: 60px;
+}
+
+.mh-experince h3 {
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: bold;
+  margin-bottom: 60px;
+}
+
+.white-vertion h1, .white-vertion h2, .white-vertion h3, .white-vertion h4, .white-vertion h5, .white-vertion h6, .white-vertion p, .white-vertion address, .white-vertion span, .white-vertion q {
+  opacity: 0.8;
+}
+
+.white-vertion .mh-work .mh-experience-deatils .mh-work-item {
+  -webkit-box-shadow: 0px 10px 20px 4px #00000015;
+  box-shadow: 0px 10px 20px 4px #00000015;
+}
+
+.mh-work .mh-experience-deatils .mh-work-item {
+  margin-bottom: 30px;
+  padding: 20px 30px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+}
+
+.mh-experince .mh-education-deatils .mh-education-item h4 a {
+  font-style: italic;
+  margin-left: 4px;
+  color: #0bceaf;
+}
+.mh-work .mh-experience-deatils .mh-work-item h4 a {
+  color: #0bceaf;
+}
+
+.mh-experince .mh-education-deatils .mh-education-item .mh-eduyear {
+  margin: 10px 0;
+  color: #0bceaf;
+}
+.mh-work .mh-experience-deatils .mh-work-item h4 {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 600;
+}
+
+.mh-experince .mh-education-deatils .mh-education-item h4 {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 600;
+}
+
+.mh-work .mh-experience-deatils .mh-work-item h4 a {
+  color: #0bceaf;
+}
+
+.mh-work .mh-experience-deatils .mh-work-item .mh-eduyear {
+  margin: 10px 0;
+  color: #0bceaf;
+}
+
+.mh-work .mh-experience-deatils .mh-work-item .work-responsibility li {
+  font-size: 14px;
+  line-height: 23px;
+  margin: 2px 0;
+}
+
+.mh-work .mh-experience-deatils .mh-work-item .work-responsibility li .fa {
+  font-size: 10px;
+  line-height: 23px;
+  margin-right: 10px;
+}
